# agent-remote-hands

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LLM-OPERATORS.md  ORIGINS.md  PROTOCOL.md  README.md  SECURITY.md  TODO.md  VERBS.md  agent.c  build.bat  build_new.bat  vmctl
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: agent-feedback.yml  bug.yml  config.yml  enhancement.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  release.yml
Tools/: install-agent.ps1
Tools/dev/: README.md  start-stable-agent.ps1
Tools/scoop/: README.md  agent-remote-hands.json
agents/windows-modern/: BUILD.md  CMakeLists.txt  COMPATIBILITY.md  README.md  agent.cpp  discovery.cpp  discovery.h  manifest.xml  uia.cpp  uia.h  wgc.cpp  wgc.h
agents/windows-modern/src/: capabilities.cpp  capabilities.hpp  config.cpp  config.hpp  connection.cpp  connection.hpp  crash_check.cpp  crash_check.hpp  element_table.cpp  element_table.hpp  errors.hpp  image_encode.cpp  image_encode.hpp  install.cpp  install.hpp  json.hpp  log.hpp  main.cpp  mdns.cpp  mdns.hpp  protocol.cpp  protocol.hpp  screen_capture.cpp  screen_capture.hpp  server.cpp  server.hpp  subscription.cpp  subscription.hpp  sysinfo.cpp  sysinfo.hpp  text_util.hpp  tier.hpp  token.cpp  token.hpp  uipi.cpp  uipi.hpp
agents/windows-modern/src/verbs/: clipboard.cpp  element.cpp  file.cpp  input.cpp  process.cpp  registry.cpp  screen.cpp  system.cpp  watch.cpp  window.cpp
agents/windows-modern/tests/unit/: errors_test.cpp  json_test.cpp  test_main.cpp  tier_test.cpp  wire_test.cpp
agents/windows-nt/: BUILD.md  COMPATIBILITY.md  agent.c  build.bat
client/: hostctl  hostctl-discover
docs/: windows-automation-notes.md
examples/vagrant/: README.md  Vagrantfile
mcp-server/: README.md  agent_client.py  pyproject.toml  requirements.txt  server.py  spec_loader.py  tools.py  variant_families.py
mcp-server/tests/: conftest.py  mock_agent.py  test_agent_client.py  test_evaluate_with_variants.py  test_spec_loader.py  test_tools.py
tests/conformance/: README.md  client.py  conftest.py  fixtures.py  run.py  test_basics.py  test_clipboard.py  test_concurrency.py  test_connection.py  test_directory.py  test_element.py  test_file.py  test_files.py  test_image_formats.py  test_input.py  test_live_capture.py  test_process.py  test_registry.py  test_resilience.py  test_screen.py  test_system.py  test_ui_automation.py  test_watch.py  test_window.py  test_windows.py  wire.py
tests/conformance/fixtures/: README.md  ps_input_click.ps1  ps_screenshot_with_cursor.ps1
